--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,19 @@
+:root {
+  --primary-color: #ffffff;
+  --secondary-color: #48525c;
+  --font-color: #424242;
+  --bg-color: #d1b5c0;
+  --heading-color: #292922;
+}
+
+[data-theme="dark"] {
+  --primary-color: #add1ee;
+  --secondary-color: white;
+  --font-color: #e1e1ff;
+  --bg-color: black;
+  --heading-color: #818cab;
+}
+
 * {
   padding: 0;
   margin: 0;
@@ -6,11 +22,11 @@
 
 a {
   text-decoration: none;
-  color: black;
+  color: var(--primary-color);
 }
 
 a:visited {
-  color: black;
+  color: var(--primary-color);
 }
 
 body {
@@ -18,7 +34,8 @@ body {
   flex-direction: column;
   align-items: center;
   min-height: 100vh;
-  background-color: #f5cac9;
+  background-color: var(--bg-color);
+  color: var(--font-color);
   padding: 30px;
 }
 
@@ -37,7 +54,7 @@ header .links {
 }
 
 header .links:hover {
-  border-bottom: 1px solid #be531c;
+  border-bottom: 1px solid var(--secondary-color);
 }
 
 main {
@@ -46,7 +63,7 @@ main {
 }
 
 main h1 {
-  color: #be531c;
+  color: var(--secondary-color);
   font-size: 72px;
   margin-top: 25px;
 }
@@ -54,6 +71,7 @@ main h1 {
 main .bio {
   font-size: 24px;
   font-family: "Tajawal", sans-serif;
+  color: var(--primary-color);
 }
 
 footer {
@@ -70,7 +88,7 @@ footer {
   width: 80px;
   height: 80px;
   border-radius: 50%;
-  box-shadow: 15px 15px 0 0 white;
+  box-shadow: 15px 15px 0px 0px var(--primary-color);
 }
 
 .dark-mode {
