--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,19 @@
 :root {
-  --primary-color: #ffffff;
-  --secondary-color: #48525c;
-  --font-color: #424242;
-  --bg-color: #d1b5c0;
-  --heading-color: #292922;
+  --primary-color: 255, 255, 255;
+  --secondary-color: 72, 82, 92;
+  --font-color: 105, 120, 134;
+  --bg-color: 209, 181, 192;
+  --heading-color: 41, 41, 34;
+  --mode: 72, 82, 92;
 }
 
 [data-theme="dark"] {
-  --primary-color: #add1ee;
-  --secondary-color: white;
-  --font-color: #e1e1ff;
-  --bg-color: black;
-  --heading-color: #818cab;
+  --primary-color: 173, 209, 238;
+  --secondary-color: 255, 255, 255;
+  --font-color: 225, 225, 255;
+  --bg-color: 0, 0, 0;
+  --heading-color: 129, 140, 171;
+  --mode: 173, 209, 238;
 }
 
 * {
@@ -22,11 +24,11 @@
 
 a {
   text-decoration: none;
-  color: var(--primary-color);
+  color: rgb(var(--primary-color));
 }
 
 a:visited {
-  color: var(--primary-color);
+  color: rgb(var(--primary-color));
 }
 
 body {
@@ -34,61 +36,99 @@ body {
   flex-direction: column;
   align-items: center;
   min-height: 100vh;
-  background-color: var(--bg-color);
-  color: var(--font-color);
+  /* background-color: var(--bg-color); */
+  padding: 3px;
+}
+
+.body-border {
+  background-color: rgb(var(--bg-color));
+  width: 100%;
+  height: calc(100vh - 6px);
   padding: 30px;
 }
 
 header {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   align-items: center;
   min-height: 100px;
   width: 100%;
-  font-family: "Tajawal", sans-serif;
+  /* font-family: "Tajawal", sans-serif; */
+  font-family: "minerva-modern";
   font-size: 24px;
+}
+
+header .links-container {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  min-height: 100px;
+}
+
+header .mode-container {
+  display: flex;
+  align-items: center;
 }
 
 header .links {
   margin-right: 15px;
+  text-align: center;
+  /* border-bottom: 1px solid var(--secondary-color); */
+  position: relative;
+  z-index: 1;
 }
 
-header .links:hover {
-  border-bottom: 1px solid var(--secondary-color);
+.links:after {
+  display: inline-block;
+  content: "";
+  width: 100%;
+  border-bottom: 2px solid rgba(var(--secondary-color), 0.1);
+  position: relative;
+  left: 0;
+  top: -24px;
+  z-index: -1;
+}
+
+/* header .links:hover {
+  border-bottom: 6px double var(--secondary-color);
+} */
+
+.links:hover:after {
+  border-bottom: 8px solid rgba(var(--secondary-color), 0.3);
 }
 
 main {
   width: 100%;
-  font-family: "Playfair Display", serif;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 100px;
 }
 
+/* @media (max-width: 500px) {
+  main {
+    margin-top: 0;
+  }
+} */
+
 main h1 {
-  color: var(--secondary-color);
+  font-family: "bicyclette";
+  color: rgb(var(--secondary-color));
   font-size: 72px;
   margin-top: 25px;
 }
 
 main .bio {
   font-size: 24px;
-  font-family: "Tajawal", sans-serif;
-  color: var(--primary-color);
+  letter-spacing: 4px;
+  /* font-family: "Tajawal", sans-serif; */
+  font-family: "minerva-modern";
+  color: rgb(var(--primary-color));
 }
 
 footer {
   min-height: 100px;
   width: 100%;
-}
-
-.moon-container {
-  width: 125px;
-  height: 125px;
-}
-
-.moon {
-  width: 80px;
-  height: 80px;
-  border-radius: 50%;
-  box-shadow: 15px 15px 0px 0px var(--primary-color);
 }
 
 .dark-mode {
@@ -97,4 +137,51 @@ footer {
 
 #sun {
   box-shadow: 15px 15px 0px 0px rgb(255, 228, 76);
+}
+
+/* switch */
+
+input[type="checkbox"] {
+  height: 0;
+  width: 0;
+  visibility: hidden;
+}
+
+label {
+  cursor: pointer;
+  text-indent: -9999px;
+  width: 50px;
+  height: 27px;
+  background: rgb(var(--mode));
+  display: block;
+  border-radius: 100px;
+  position: relative;
+}
+
+label:after {
+  content: "";
+  position: absolute;
+  top: 1px;
+  left: 1px;
+  width: 25px;
+  height: 25px;
+  background: rgb(252, 229, 102);
+  border-radius: 90px;
+  transition: 0.3s;
+  box-shadow: 0px 0px 25px rgb(255, 217, 0);
+}
+
+/* input:checked + label {
+  background: #bada55;
+} */
+
+input:checked + label:after {
+  left: calc(100% - 1px);
+  transform: translateX(-100%);
+  background: #fff;
+  box-shadow: 3px 5px 20px rgb(255, 245, 191, 0.6);
+}
+
+label:active:after {
+  width: 20px;
 }
