--- a/styles.css
+++ b/styles.css
@@ -37,13 +37,13 @@ body {
   align-items: center;
   min-height: 100vh;
   /* background-color: var(--bg-color); */
-  padding: 3px;
+  padding: 6px;
 }
 
 .body-border {
   background-color: rgb(var(--bg-color));
   width: 100%;
-  height: calc(100vh - 6px);
+  height: calc(100vh - 12px);
   padding: 30px;
 }
 
@@ -60,9 +60,7 @@ header {
 
 header .links-container {
   display: flex;
-  justify-content: flex-end;
   align-items: center;
-  min-height: 100px;
 }
 
 header .mode-container {
@@ -71,6 +69,7 @@ header .mode-container {
 }
 
 header .links {
+  padding-top: 17px;
   margin-right: 15px;
   text-align: center;
   /* border-bottom: 1px solid var(--secondary-color); */
@@ -82,10 +81,10 @@ header .links {
   display: inline-block;
   content: "";
   width: 100%;
-  border-bottom: 2px solid rgba(var(--secondary-color), 0.1);
+  border-bottom: 1px solid rgba(var(--secondary-color), 0.1);
   position: relative;
   left: 0;
-  top: -24px;
+  top: -13px;
   z-index: -1;
 }
 
@@ -95,6 +94,8 @@ header .links {
 
 .links:hover:after {
   border-bottom: 8px solid rgba(var(--secondary-color), 0.3);
+  border-radius: 25px 0 25px 0;
+  transition: border-bottom 0.3s;
 }
 
 main {
@@ -102,7 +103,9 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 100px;
+  margin-top: 120px;
+  z-index: 2;
+  position: relative;
 }
 
 /* @media (max-width: 500px) {
@@ -124,6 +127,10 @@ main .bio {
   /* font-family: "Tajawal", sans-serif; */
   font-family: "minerva-modern";
   color: rgb(var(--primary-color));
+}
+
+.bio-container {
+  display: flex;
 }
 
 footer {
@@ -184,4 +191,67 @@ input:checked + label:after {
 
 label:active:after {
   width: 20px;
+}
+
+/* blinking cursor */
+
+.blinking-cursor {
+  font-weight: 100;
+  font-size: 24px;
+  color: rgba(var(--secondary-color));
+  -webkit-animation: 1s blink step-end infinite;
+  -moz-animation: 1s blink step-end infinite;
+  -ms-animation: 1s blink step-end infinite;
+  -o-animation: 1s blink step-end infinite;
+  animation: 1s blink step-end infinite;
+}
+
+@keyframes blink {
+  from,
+  to {
+    color: transparent;
+  }
+  50% {
+    color: rgba(var(--secondary-color));
+  }
+}
+
+@-moz-keyframes blink {
+  from,
+  to {
+    color: transparent;
+  }
+  50% {
+    color: rgba(var(--secondary-color));
+  }
+}
+
+@-webkit-keyframes blink {
+  from,
+  to {
+    color: transparent;
+  }
+  50% {
+    color: rgba(var(--secondary-color));
+  }
+}
+
+@-ms-keyframes blink {
+  from,
+  to {
+    color: transparent;
+  }
+  50% {
+    color: rgba(var(--secondary-color));
+  }
+}
+
+@-o-keyframes blink {
+  from,
+  to {
+    color: transparent;
+  }
+  50% {
+    color: rgba(var(--secondary-color));
+  }
 }
